--- a/products.html
+++ b/products.html
@@ -114,11 +114,11 @@
         let localData = JSON.parse(localStorage.getItem("products"));
         localData.map((d, i) => {
             if (d.id == id) {
-                let pi = document.getElementById("id").value = d.id;
-                let pn = document.getElementById("productName").value = d.Name;
-                let pp = document.getElementById("productPrice").value = d.Price;
-                let pq = document.getElementById("productQuantity").value = d.PriceQuantity;
-                let img = document.getElementById("img1").value = d.Image;
+                document.getElementById("id").value = d.id;
+                document.getElementById("productName").value = d.Name;
+                document.getElementById("productPrice").value = d.Price;
+                document.getElementById("productQuantity").value = d.PriceQuantity;
+                 document.getElementById("img1").value = d.Image;
             }
         })
         document.getElementById("id").setAttribute('disabled','');
